--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -122,6 +122,8 @@ where $K$ is the total bins, $B$ is the bins-per-octave, and $\xi_{\text{min,max
 \section{xumx-sliCQ experiments}
 \label{appendix:crazyexperiments}
 
+\todo[inline]{actually do this, talk about ISMIR2021 challenge, submission repo, experiments, etc.}
+
 \end{appendices}
 
 \end{document}
